# cpp-devcontainers

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AI_OPS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PROJECT_PLAN.md  README.md  slot_map.code-workspace  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  docker-bake.hcl
.devcontainer/scripts/: build_remote_images.sh  post_create.sh
.githooks/: pre-commit
.github/: buildkitd.toml  dependabot.yml  renovate.json
.github/ci/: ci-runner.Dockerfile
.github/codex/: codex-pr-review-prompt.md
.github/gemini/: gemini-pr-review-prompt.md
.github/workflows/: README.md  build-devcontainer.yml  ci.yml  codex-pr-review.yml  devcontainer-lint.yml  gemini-pr-review.yml  hardcoded-guard.yml  pre-commit.yml  (+1 more)
docs/: AI_AGENT_CONTEXT.md  CRITICAL_FINDINGS.md  CURRENT_WORKFLOW.md  DOCUMENTATION_INDEX.md  REFACTORING_ROADMAP.md  TODO.md  WORKFLOW_DIAGRAMS.md  ai-agent-research.md  ai-agent-sdk-research.md  ai_agent_action_plan.md  ai_agent_cli_usage.md  ai_cleanup_and_build_guide.md  ai_codex_prompt.md  ai_devcontainer_bake_mutagen_overview.md  ai_devcontainer_workflow.md  ai_master_build_guide.md  ai_mutagen_runbook.codex.2.md  cmake_workflow.md  devcontainer-branch-comparison.md  devcontainer-image-optimization-plan.md  devcontainer-ssh-docker-context.md  devcontainer-tools.md  mutagen-ai-hand-off.md  mutagen-research.md  mutagen-validation.md  mutagen_sync.md  remote-devcontainer.md  remote-docker-context.md  remote_devcontainer_ai_guide.md  review_report.md  runner_security.md  self_hosted_devcontainer_gha_plan.md  ssh-configurations.md  ssh-key-management-options.md  walkthrough.md
scripts/: check_devcontainer_config.sh  check_docker_bake.sh  check_hardcoded_refs.sh  ci_bake_smoke.sh  ci_bake_validate.sh  clang_branch_utils.sh  cleanup_devcontainers.sh  deploy_remote_devcontainer.sh  generate_cpp_devcontainer_ssh_config.sh  inspect_image_sizes.sh  pre_commit.sh  render_diagrams.sh  run_local_devcontainer.sh  setup_mutagen_host.sh  ssh_devcontainer.sh  status_devcontainer.sh  test_devcontainer_ssh.sh  verify_cache_volume.sh  verify_devcontainer.sh  verify_mutagen.sh  verify_remote_devcontainer_matrix.sh
tests/: CMakeLists.txt  test_slotmap.cpp
(+115 files in other folders)
